@@ -1,3 +1,11 @@
+2009-09-21  Darren Kenny  <darren.kenny@sun.com>
+
+	* capplet/nwam_env_pref_dialog.c: 
+	  Fix defect#9649 where the nsswitch default button wasn't being
+	  handled. 
+	* nwam_core/usr/include/libnwam.h:
+	  Update to latest version in 09/17 builds.
+
 2009-09-18  Darren Kenny  <darren.kenny@sun.com>
 
 	* common/libnwamui.c, common/libnwamui.h:
